[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Entities/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://assets/Button-Sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/Music and Sounds/Hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="Animation" id=2]
resource_name = "pressed"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "released"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Button" type="Sprite"]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
hframes = 2
script = ExtResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pressed = SubResource( 2 )
anims/released = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="released" from="." to="." method="_on_Button_released"]

[editable path="PlayerDetectionZone"]
